# Magic-World

./: CMakeLists.txt  MAGIC MAZE.pptx  Makefile.win  README.md  display.c  display.h  file.c  file.h  graphics.c  graphics.dev  graphics.h  graphics.layout  main.c  maze.txt  monsters.c  monsters.h  scene.c  scene.h  solve.c  solve.h  wordle.c  wordle.h  words.txt
game/: botton.c  display.c  file.c  scene.c  solve.c
include/: afterplay.h  display.h  file.h  graphics.h  monsters.h  scene.h  solve.h
libgraphics/: graphics.c
